# chimera-pverify

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
chimera_pverify/controllers/: pointverify.py
chimera_pverify/util/: vizquery.py
chimera_pverify/util/catalogs/: landolt.py
chimera_pverify/util/tests/: test_landolt.py  test_vizquery.py
scripts/: chimera-pverify  pmodel.py
src/chimera_pverify/controllers/: pointverify.py
src/chimera_pverify/util/: astrometrynet.py  vizquery.py  votable.py
src/chimera_pverify/util/catalogs/: landolt.py
src/chimera_pverify/util/tests/: test_landolt.py  test_vizquery.py
tests/chimera_pverify/: __init__.py
