[project]
name = "chimera_pverify"
version = "0.1.0"
description = "Chimera plugin for checking telescope pointing"
license = "MIT"
authors = [
    { name = "William Schoenell", email = "wschoenell@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chimera",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chimera_pverify"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["N", "I", "UP", "F"]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "(?i)# SPDX-FileCopyrightText:\\s\\d{4}(-(\\d{4}|present))*"

[tool.uv.sources]
chimera = { git = "https://github.com/astroufsc/chimera.git" }
